--- a/default_config.json
+++ b/default_config.json
@@ -1,19 +1,23 @@
 {
     "time": {
         "rate": 1.0,
-        "always_advance": true
+        "always_advance": true,
+        "units": "min"
     },
     "beam": {
         "rate": 127.0,
-        "always_advance": true
+        "always_advance": true,
+        "units": "μA/min"
     },
     "events": {
         "rate": 1.0,
-        "always_advance": true
+        "always_advance": true,
+        "units": "Mevents/min"
     },
     "T_head": {
         "initial": 300.0,
         "rate_up": 10.0,
-        "rate_down": -10.0
+        "rate_down": -10.0,
+        "units": "K"
     }
 }
