--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = ["matplotlib"]
 
 [project.optional-dependencies]
 docs = ["sphinx", "sphinx-rtd-theme", "sphinx-argparse>=0.4.0", "sphinx-autodoc-typehints"]
-lint = ["ruff==0.11.*"]
+lint = ["ruff==0.14.*"]
 test = ["pytest==8.3.4", "pytest-cov==5.0.0"]
 
 [project.scripts]
@@ -78,7 +78,6 @@ select = [
     "ISC", # Flake8 implicit string concat
     "RSE", # Flake8 raise
     "FA",  # Flake8 future
-    "FBT", # Flake8 boolean trap
     "C4",  # Flake8 comprehensions
     "Q",   # Flake8 Quotes
     "RET", # Flake8 return
@@ -112,6 +111,13 @@ ignore = [
     "PLR2004",  # Magic constant value
     "D105",     # Magic method doc
     "ANN401",   # No typing.Any
+    "COM812",   # Comma end
+]
+
+[tool.ruff.lint.per-file-ignores]
+"dummy_genie.py" = [
+    "PLR0917",  # Too many positionals
+    "ARG004",   # Unused arg
 ]
 
 [tool.ruff.lint.pydocstyle]
@@ -120,13 +126,6 @@ convention = "google"
 [tool.isort]
 profile = "black"
 
-[tool.numpydoc_validation]
-checks = [
-    "all",   # report on all checks, except the below
-    "EX01",
-    "SA01",
-    "ES01",
-]
 # remember to use single quotes for regex in TOML
 exclude = [  # don't report on objects that match any of these regex
     '\.undocumented_method$',
