--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v5
       - name: Pack
         run: |
-           pip wheel .
+           pip wheel --no-deps .
            mv ibex_vis*.whl web
       - name: Setup Pages
         uses: actions/configure-pages@v5
